[workspace]
# members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz"]
members = ["quinn-proto"]
# default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]
default-members = [ "quinn-proto"]
resolver = "2"


[workspace.dependencies]
tracing = { version = "0.1.10", default-features = false, features = ["std"] }

[profile.bench]
debug = true

[profile.release]
debug = true
