[workspace]
# members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz"]
members = [ "quinn","quinn-proto"]
# default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]
default-members = [ "quinn-proto"]
resolver = "2"


[workspace.dependencies]
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tinyvec = { version = "1.1", features = ["alloc"] }

[profile.bench]
debug = true

[profile.release]
debug = true
