[workspace]
# members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz"]
members = [ "quinn","quinn-proto", "quinn-udp"]
# default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]
default-members = [ "quinn-proto"]
resolver = "2"


[workspace.dependencies]
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tinyvec = { version = "1.1", features = ["alloc"] }
# the following are all used for quinn.
tokio = { version = "1.28.1", features = ["sync"] }
socket2 = "0.5"

rcgen = "0.13"

[profile.bench]
debug = true

[profile.release]
debug = true
