[package]
name = "scratch-quinn-proto"
version = "0.1.0"
edition = "2021"

[features]
# todo: optimize the feature
default = ["rustls"]
rustls = ["dep:rustls", "ring"]
ring = ["dep:ring"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
thiserror = "1.0.21"
rand = "0.8"
slab = "0.4"
# used for the feature
ring = { version = "0.17", optional = true }
# used for the above rustls feature and `CertificateDer`
rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"], optional = true }


[dev-dependencies]
hex-literal = "0.4.0"

rcgen = "0.13"
lazy_static = "1"
