[package]
name = "scratch-quinn"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["ring", "runtime-tokio"]
# Enables `Endpoint::client` and `Endpoint::server` conveniences
ring = ["proto/ring"]
runtime-tokio = ["tokio/time", "tokio/rt", "tokio/net"]

[dependencies]
tracing = { workspace = true }
proto = { package = "scratch-quinn-proto", path = "../quinn-proto", version = "*", default-features = false }
# used for `Endpoint::client`
socket2 = { workspace = true }
tokio = { workspace = true }
# 重命名引入的包
udp = { package = "scratch-quinn-udp", path = "../quinn-udp", version = "*", default-features = false, features = [
  "tracing",
] }
# 
[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "time",
  "macros",
] }
rcgen = { workspace = true }
